[gd_scene load_steps=26 format=3 uid="uid://coabnafg3ndad"]

[ext_resource type="Shader" path="res://shaders/stars.gdshader" id="1_4my2h"]
[ext_resource type="Script" path="res://scenes/screens/score_screen.gd" id="1_570m6"]
[ext_resource type="FontFile" uid="uid://ceokif2jtvdfs" path="res://assets/fonts/Megatron.otf" id="2_ysylg"]
[ext_resource type="Texture2D" uid="uid://2t114lbov48j" path="res://assets/sprites/icons/score.png" id="3_3l72c"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_b2cbs"]
load_path = "res://.godot/imported/laser_enemy_06.png-fb76b42d0f989c7ba1ddf4f31e103d15.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_rf6b6"]
load_path = "res://.godot/imported/laser_player.png-5b4aa4b36ff6d3b69426b1b2df86c9a7.ctex"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pn6gm"]
shader = ExtResource("1_4my2h")
shader_parameter/dimensions = Vector2(1024, 600)
shader_parameter/small_stars = 50.0
shader_parameter/small_stars_far_size = 0.5
shader_parameter/small_stars_near_size = 0.5
shader_parameter/large_stars = 20.0
shader_parameter/large_stars_far_size = 0.5
shader_parameter/large_stars_near_size = 0.3
shader_parameter/far_stars_color = Color(1, 1, 1, 0.172549)
shader_parameter/near_stars_color = Color(1, 1, 1, 0.568627)
shader_parameter/base_scroll_speed = 0.2
shader_parameter/additional_scroll_speed = 0.5
shader_parameter/small_stars_texture = SubResource("CompressedTexture2D_rf6b6")
shader_parameter/large_stars_texture = SubResource("CompressedTexture2D_b2cbs")

[sub_resource type="Gradient" id="Gradient_il5hw"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_nwscm"]
gradient = SubResource("Gradient_il5hw")
fill_to = Vector2(0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w56x4"]
bg_color = Color(0.239216, 0.345098, 0.403922, 0.909804)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.698039, 0.807843, 0.862745, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8godg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xp6qc"]
bg_color = Color(0.109804, 0.176471, 0.207843, 0.784314)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.176471, 0.266667, 0.309804, 1)
corner_radius_top_left = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fhjed"]
bg_color = Color(0.501961, 0.65098, 0.729412, 0.784314)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.698039, 0.807843, 0.862745, 1)
corner_radius_top_left = 5
corner_radius_top_right = 20
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0p0hl"]
bg_color = Color(0.768627, 0.854902, 0.898039, 0.909804)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.698039, 0.807843, 0.862745, 1)
corner_radius_top_left = 5
corner_radius_top_right = 20
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t6uti"]
bg_color = Color(0.239216, 0.345098, 0.403922, 0.909804)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.698039, 0.807843, 0.862745, 1)
corner_radius_top_left = 5
corner_radius_top_right = 20
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_td1gf"]
bg_color = Color(0.109804, 0.176471, 0.207843, 0.784314)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.176471, 0.266667, 0.309804, 1)
corner_radius_top_left = 5
corner_radius_top_right = 20
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_x3w7q"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_snr8d"]
bg_color = Color(0.501961, 0.65098, 0.729412, 0.784314)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.698039, 0.807843, 0.862745, 1)
corner_radius_top_left = 5
corner_radius_top_right = 20
corner_radius_bottom_right = 5
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_64gr8"]
bg_color = Color(0.768627, 0.854902, 0.898039, 0.909804)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.698039, 0.807843, 0.862745, 1)
corner_radius_top_left = 5
corner_radius_top_right = 20
corner_radius_bottom_right = 5
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jjp5i"]
bg_color = Color(0.239216, 0.345098, 0.403922, 0.909804)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.698039, 0.807843, 0.862745, 1)
corner_radius_top_left = 5
corner_radius_top_right = 20
corner_radius_bottom_right = 5
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n7c48"]
bg_color = Color(0.501961, 0.65098, 0.729412, 0.784314)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.698039, 0.807843, 0.862745, 1)
corner_radius_top_left = 5
corner_radius_top_right = 20
corner_radius_bottom_right = 5
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k6uj8"]
bg_color = Color(0.768627, 0.854902, 0.898039, 0.909804)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.698039, 0.807843, 0.862745, 1)
corner_radius_top_left = 5
corner_radius_top_right = 20
corner_radius_bottom_right = 5
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_muigs"]
bg_color = Color(0.239216, 0.345098, 0.403922, 0.909804)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.698039, 0.807843, 0.862745, 1)
corner_radius_top_left = 5
corner_radius_top_right = 20
corner_radius_bottom_right = 5
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_auni7"]
bg_color = Color(0.109804, 0.176471, 0.207843, 0.784314)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.176471, 0.266667, 0.309804, 1)
corner_radius_top_left = 5
corner_radius_top_right = 20
corner_radius_bottom_right = 5
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gnbwp"]

[node name="ScoreScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_570m6")

[node name="StarsBackground" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_pn6gm")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_nwscm")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.313726, 0.447059, 0.509804, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_ysylg")
theme_override_font_sizes/font_size = 60
text = "Your scoRe"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="TextureRect" type="TextureRect" parent="CenterContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
texture = ExtResource("3_3l72c")
stretch_mode = 5

[node name="ScoreLabel" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ysylg")
theme_override_font_sizes/font_size = 40
text = "123456789"

[node name="TextureRect2" type="TextureRect" parent="CenterContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
texture = ExtResource("3_3l72c")
stretch_mode = 5

[node name="VBoxContainer2" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="CenterContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ysylg")
theme_override_font_sizes/font_size = 20
text = "type your name to submit score"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
alignment = 1

[node name="NameLineEdit" type="LineEdit" parent="CenterContainer/VBoxContainer/VBoxContainer2/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 47)
layout_mode = 2
theme_override_colors/font_uneditable_color = Color(0.239216, 0.345098, 0.403922, 1)
theme_override_colors/caret_color = Color(0.807843, 0.878431, 0.917647, 1)
theme_override_colors/selection_color = Color(0.768627, 0.854902, 0.898039, 0.564706)
theme_override_constants/caret_width = 3
theme_override_fonts/font = ExtResource("2_ysylg")
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxFlat_w56x4")
theme_override_styles/focus = SubResource("StyleBoxEmpty_8godg")
theme_override_styles/read_only = SubResource("StyleBoxFlat_xp6qc")
placeholder_text = "your name"
alignment = 1
max_length = 10
editable = false
caret_blink = true

[node name="SubmitButton" type="Button" parent="CenterContainer/VBoxContainer/VBoxContainer2/HBoxContainer2"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ysylg")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_fhjed")
theme_override_styles/hover = SubResource("StyleBoxFlat_0p0hl")
theme_override_styles/pressed = SubResource("StyleBoxFlat_t6uti")
theme_override_styles/disabled = SubResource("StyleBoxFlat_td1gf")
theme_override_styles/focus = SubResource("StyleBoxEmpty_x3w7q")
disabled = true
text = "submit"

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="PlayAgainButton" type="Button" parent="CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("2_ysylg")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_snr8d")
theme_override_styles/hover = SubResource("StyleBoxFlat_64gr8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jjp5i")
theme_override_styles/focus = SubResource("StyleBoxEmpty_x3w7q")
text = "play again"

[node name="ScoresButton" type="Button" parent="CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ysylg")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_n7c48")
theme_override_styles/hover = SubResource("StyleBoxFlat_k6uj8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_muigs")
theme_override_styles/disabled = SubResource("StyleBoxFlat_auni7")
theme_override_styles/focus = SubResource("StyleBoxEmpty_gnbwp")
disabled = true
text = "scores"

[node name="MainMenuButton" type="Button" parent="CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("2_ysylg")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_snr8d")
theme_override_styles/hover = SubResource("StyleBoxFlat_64gr8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jjp5i")
theme_override_styles/focus = SubResource("StyleBoxEmpty_x3w7q")
text = "main menu"

[connection signal="pressed" from="CenterContainer/VBoxContainer/VBoxContainer/PlayAgainButton" to="." method="_on_play_again_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
